--- a/Spotify.ipynb
+++ b/Spotify.ipynb
@@ -66,8 +66,8 @@
    },
    "outputs": [],
    "source": [
-    "my_id = \"31628b5b3b6d4f57a64a0ab9755c9ceb\"\n",
-    "my_secret = \"c8c9611ef1154ebe898dd20033e59203\"\n",
+    "my_id = \"myidhiddenhere\"\n",
+    "my_secret = \"mysecret\"\n",
     "client_credentials_manager = SpotifyClientCredentials(client_id=my_id, client_secret=my_secret)\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
